Created an all friends page, where you can look at other people friends.

--- a/src/main/resources/static/css/myStylesheet.css
+++ b/src/main/resources/static/css/myStylesheet.css
@@ -6,6 +6,7 @@
 @import "singleBookStyleSheet.css";
 @import "userProfileStylesheet.css";
 @import "notificationStylesheet.css";
+@import "bestFriendPageStylesheet.css";
 
 
 
