Refactored the style of the Index page, Created a indexStylesheet. cleaned out myStyleSheet. Made other stylesheets to keep things clean.

--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -13,6 +13,8 @@
     <script src="https://kit.fontawesome.com/5d0c1b436d.js" crossorigin="anonymous"></script>
     <!-- Personal Stylesheet -->
     <link rel="stylesheet" th:href="@{/css/myStylesheet.css}">
+    <!-- Main Personal Stylesheet -->
+    <link rel="stylesheet" th:href="@{/css/indexStylesheet.css}">
 </head>
 
 
