--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -5,92 +5,86 @@
 <body>
 
 
-    <!===== Navbar =====>
-    <nav th:replace="partials/navbar.html :: Navbar"></nav>
+<!-- Navigation -->
+<nav th:replace="partials/navbar.html :: Navbar"></nav>
 
+<!-- Hero Section -->
+<main>
 
-    <!===== Hero Section =====>
-    <main id="hero" class="container-fluid d-flex align-items-center">
+    <!------ Hero Introduction ------>
+    <div id="hero-introduction">
         <div class="container">
-            <div class="row">
-                <section class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-                    <h1>Embrace Your Inner Bookworm</h1>
-                    <h2>explore, review, and see what others are saying about your favorite books.</h2>
-                    <aside class="d-flex justify-content-center justify-content-lg-start">
-                        <a th:href="@{/sign-up}" class="btn-get-started">Get Started</a>
-                        <a th:href="@{/login}" class="btn-log-in">Log in</a>
-                    </aside>
+            <!-- Introduction Headings -->
+            <section id="section-one">
+                <h1>Embrace your inner Bookworm</h1>
+                <h2>Explore, review, and see what other are saying about your favorite books.</h2>
+                <aside>
+                    <a th:href="@{/sign-up}" class="get-started-button">Get Started</a>
+                    <a th:href="@{/login}" class="login-button">Log in</a>
+                </aside>
+            </section>
+            <!-- Bookworm Logo -->
+            <section id="section-two">
+                <img th:src="@{img/bookworm.png}" alt="Bookworm" id="bookwormLogo">
+            </section>
+        </div>
+    </div>
+    <!------ Services - Search, Review, Favorite ------>
+    <div id="service">
+        <div class="container-lg container-fluid">
+            <div id="icon-section-container">
+                <!-- Search -->
+                <section class="icon-container">
+                    <div class="icon"><i class="fa-solid fa-magnifying-glass icon-logo"></i></div>
+                    <h4>Search for Books</h4>
+                    <p>Explore our database to discover the Explore our database to discover the book that will steal your heart.</p>
                 </section>
-                <section class="col-lg-6 hero-img order-1 order-lg-2 d-flex justify-content-center">
-                    <img th:src="@{img/bookworm.png}" alt="Bookworm Logo" class="img-fluid"/>
+                <!-- Review -->
+                <section class="icon-container">
+                    <div class="icon"><i class="fa-solid fa-comment icon-logo"></i></div>
+                    <h4>Leave reviews</h4>
+                    <p>Share your thoughts and pen down your reviews to let the world know what you truly felt about that book!</p>
+                </section>
+                <!-- Favorite -->
+                <section class="icon-container">
+                    <div class="icon"><i class="fa-solid fa-heart-circle-plus icon-logo"></i></div>
+                    <h4>Favorite books</h4>
+                    <p>Never lose sight of your beloved books and discover your next great read!</p>
                 </section>
             </div>
         </div>
-    </main>
+    </div>
 
-
-    <!===== Services =====>
-    <div id="services" class="services section-bg">
-        <div class="container" >
-            <section class="row">
-                <!===== Search =====>
-                <article class="col-xl-4 col-md-4 d-flex align-items-stretch mt-4 mt-md-0">
-                    <section class="icon-container">
-                        <div class="icon"><i class="fa-solid fa-magnifying-glass icon-logo"></i></div>
-                        <h4>Search for Books</h4>
-                        <p>Explore our database to discover the Explore our database to discover the book that will steal your heart.</p>
-                    </section>
-                </article>
-                <!===== Review =====>
-                <article class="col-xl-4 col-md-4 d-flex align-items-stretch mt-4 mt-md-0">
-                    <section class="icon-container">
-                        <div class="icon"><i class="fa-solid fa-comment icon-logo"></i></div>
-                        <h4>Leave reviews</h4>
-                        <p>Share your thoughts and pen down your reviews to let the world know what you truly felt about that book!</p>
-                    </section>
-                </article>
-                <!===== Favorite =====>
-                <article class="col-xl-4 col-md-4 d-flex align-items-stretch mt-4 mt-md-0">
-                    <section class="icon-container">
-                        <div class="icon"><i class="fa-solid fa-heart-circle-plus icon-logo"></i></div>
-                        <h4>Favorite books</h4>
-                        <p>Never lose sight of your beloved books and discover your next great read!</p>
-                    </section>
-                </article>
+    <!----- Current Books Available ------>
+    <div id="currentBooksAvailable" class="container-fluid container-lg">
+        <!-- title -->
+        <div class="main-title">
+            <h2>Books Available</h2>
+            <p>At eight in the morning. She will not be up, so that we shall have a clear field. Besides, we must be prompt, for this marriage may mean a complete change in her life and habits. I must wire to the King without delay.</p>
+        </div>
+        <!-- Books Section -->
+        <div id="wholeBookContainer">
+            <section class="book-container" th:each="favBook:${bookshelf}">
+                <!-- anchor -->
+                <a th:href="@{/single/{id}(id = ${favBook.getId()})}" th:name="${favBook.getTitle()}">
+                    <!-- Book Cover -->
+                    <img th:src="${favBook.getCover_page()}" th:alt="${favBook.getTitle()}" class="book-cover">
+                    <p>
+                        <!-- Book Title -->
+                        <span class="book-title" th:text="${favBook.getTitle()}">Title of Book</span><br/>
+                        <small>
+                            <!-- Book Author -->
+                            By <span th:text="${favBook.getAuthor()}"></span>
+                        </small>
+                    </p>
+                </a>
             </section>
         </div>
     </div>
 
+</main>
 
-    <!===== Books Available =====>
-    <div>
-        <div class="container-lg container-fluid">
-            <!-- Same Genre Book Title -->
-            <div class="section-title pt-5">
-                <h2>Books Available</h2>
-                <p>At eight in the morning. She will not be up, so that we shall have a clear field. Besides, we must be prompt, for this marriage may mean a complete change in her life and habits. I must wire to the King without delay.</p>
-            </div>
-
-            <!-- This is going to be the container for the scroll -->
-            <div id="WholeSameGenreBookContainer">
-                <section class="favorite-book-container" th:each="favBook:${bookshelf}">
-                    <a th:href="@{/single/{id}(id = ${favBook.getId()})}">
-                        <img th:src="${favBook.getCover_page()}" th:alt="${favBook.getTitle()}" class="same-genre-book-cover">
-                        <p>
-                            <span class="book-title" th:text="${favBook.getTitle()}">Title of Book</span><br/>
-                            <small>By </small>
-                            <small th:text="${favBook.getAuthor()}">Author</small>
-                        </p>
-                    </a>
-                </section>
-                <section th:if="${#lists.isEmpty(bookshelf)}" class="mx-auto mb-5">
-                    <h5 class="text-center">No Favorite Book currently saved.</h5>
-                </section>
-            </div>
-        </div>
-    </div>
-
-    <!=== Footer ===>
-    <footer th:replace="partials/footer.html :: Footer"></footer>
-    </body>
+<!-- Footer -->
+<footer th:replace="partials/footer.html :: Footer"></footer>
+</body>
 </html>
