--- a/src/main/resources/static/css/buttonStylesheet.css
+++ b/src/main/resources/static/css/buttonStylesheet.css
@@ -1,10 +1,18 @@
 /*
+Navbar - Logged Out
+    - Get Started
+    - Login
 Hero Introduction
     Get Started Button
     Login Button
+
 */
+/*Index*/
 #hero-introduction .container #section-one aside .get-started-button,
-#hero-introduction .container #section-one aside .login-button{
+#hero-introduction .container #section-one aside .login-button,
+/*Navbar*/
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn{
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -23,24 +31,72 @@ Hero Introduction
     touch-action: manipulation;
     text-decoration: none;
 }
-/*
-Hero Introduction - Hover
+
+/*  ~~HOVER~~
+Navbar - Logged Out
+    - Get Started
+    - Login
+Hero Introduction
     Get Started Button
     Login Button
+
 */
+
+/*Index*/
 #hero-introduction .container #section-one aside .get-started-button:hover,
-#hero-introduction .container #section-one aside .login-button:hover{
+#hero-introduction .container #section-one aside .login-button:hover,
+/*Navbar*/
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn:hover{
     background-color: #0e8641;
     border: 1px solid #0e8641;
     transform: translateY(-2px);
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
-/*Login Button Color Change*/
-#hero-introduction .container #section-one aside .login-button {
+
+
+/*
+    ----- Individual Styling Buttons -----
+*/
+
+/* Login Button Color Change*/
+/*Index*/
+#hero-introduction .container #section-one aside .login-button,
+    /*Navbar*/
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in{
     background-color: #5b8ed5;
     border: 1px solid #5b8ed5;
 }
-#hero-introduction .container #section-one aside .login-button:hover {
+
+/*Login Button - HOVER*/
+/*Index*/
+#hero-introduction .container #section-one aside .login-button:hover,
+    /*Navbar*/
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
+}
+
+
+
+/*--------- Navigation ---------*/
+/*Login Button*/
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in{
+    margin-right: 12px;
+    margin-left: 12px;
+}
+
+
+
+
+/*---------- Screens smaller than 991px ----------*/
+@media (max-width: 991px){
+    /*About Bookworm*/
+    #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-about-bookworm{
+        margin-top: 12px;
+    }
+    /*Login Button*/
+    #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in{
+        margin: 12px 0;
+    }
 }
