--- a/src/main/resources/static/css/navbarFooterStylesheet.css
+++ b/src/main/resources/static/css/navbarFooterStylesheet.css
@@ -1,3 +1,46 @@
+
+
+/*--------------- Navbar - Logged out ---------------*/
+#loggedOutNavbar{
+    .container{
+        /*Bookworm Brand*/
+        .navbar-brand {
+            color: #37517e;
+            transition: transform 0.8s ease-in-out, color 1.4s ease-in-out, font-weight 1s ease-in-out;
+            &:hover{
+                transform: scale(1.08);
+                color: #13aa52;
+                font-weight: 600;
+            }
+        }
+        #navbarNavAltMarkup{
+            .navbar-nav{
+                /*About Bookworm Button*/
+                .nav-about-bookworm{
+                    box-shadow: inset 0 0 0 0 #54b3d6;
+                    color: #1e1e1e;
+                    transition: all.3s ease-in-out;
+                    /*Hover*/
+                    &:hover{
+                        font-weight: 600;
+                        box-shadow: inset 200px 0 0 0 #54b3d6;
+                        color: white;
+                        padding-left:12px;
+                        padding-right: 12px;
+                        width: fit-content;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
 /*--------------- Footer ---------------*/
 /*===== Footer ======*/
 #footer{
