--- a/src/main/resources/static/css/navbarStylesheet.css
+++ b/src/main/resources/static/css/navbarStylesheet.css
@@ -1,121 +1,23 @@
-/*========== Universal ==========*/
-/*== Bookworm Brand Hover===*/
-.navbar .container .navbar-brand{
-    transition: all 0.8s ease-in-out;
-    color: #37517e;
-}
-/*== Bookworm Brand Hover===*/
-.navbar .container .navbar-brand:hover{
-    transform: scale(1.08);
-    color: #13aa52;
-}
-/*========== Logged Out Navbar ==========*/
-/*== About Bookworm Button ===*/
-.navbar-collapse .navbar-nav .nav-about-bookworm{
-    box-shadow: inset 0 0 0 0 #54b3d6;
-    color: #1e1e1e;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-}
-/*== About Bookworm Button Hover ===*/
-.navbar-collapse .navbar-nav .nav-about-bookworm:hover{
-    font-weight: 500;
-    box-shadow: inset 200px 0 0 0 #54b3d6;
-    color: white;
-}
-
-/*== Get Started Button & Login Button & Continue to search Button ===*/
-.navbar-collapse .navbar-nav .nav-get-started-btn,
-.navbar-collapse .navbar-nav .nav-log-in,
-#continue-search-button{
-    background-color: #13aa52;
-    border: 1px solid #13aa52;
-    border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    outline: none;
-    padding: 10px 25px;
-    text-align: center;
-    transform: translateY(0);
-    transition: transform 150ms, box-shadow 150ms;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    text-decoration: none;
-}
-/*== Get Started Button & Login Button Hover ===*/
-.navbar-collapse .navbar-nav .nav-get-started-btn:hover,
-.navbar-collapse .navbar-nav .nav-log-in:hover,
-#continue-search-button:hover{
-    background-color: #0e8641;
-    border: 1px solid #0e8641;
-    transform: translateY(-2px);
-    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
-}
-/*== Login Button Hover ===*/
-.navbar-collapse .navbar-nav .nav-log-in{
-    background-color: #5b8ed5;
-    border: 1px solid #5b8ed5;
-    margin: 0 5px;
-
-}
-/*== Login Button Hover ===*/
-.navbar-collapse .navbar-nav .nav-log-in:hover{
-    background-color: #37517e;
-    border: 1px solid #37517e;
-}
-
-/*== Continue to search Button ===*/
-#continue-search-button {
-    background-color: #5b8ed5;
-    border: 1px solid #5b8ed5;
-}
-/*== Continue to search Button - HOVER ===*/
-#continue-search-button:HOVER {
-    background-color: #37517e;
-    border: 1px solid #37517e;
-}
 
 
 
-@media (max-width: 991px){
-    /*== Get Started Button & Login Button ===*/
-     .navbar-collapse .navbar-nav .nav-log-in{
-        margin: 5px 0;
-    }
-    /*== About Bookworm Button ===*/
-    .navbar-collapse .navbar-nav .nav-about-bookworm{
-        background-color: #54b3d6;
-        border: 1px solid #54b3d6;
-        border-radius: 4px;
-        box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
-        box-sizing: border-box;
-        color: #fff;
-        cursor: pointer;
-        font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
-        font-size: 14px;
-        outline: none;
-        padding: 10px 25px;
-        text-align: center;
-        transform: translateY(0);
-        transition: transform 150ms, box-shadow 150ms;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        text-decoration: none;
-        margin-top: 10px;
-    }
-    /*== About Bookworm Button Hover ===*/
-    .navbar-collapse .navbar-nav .nav-about-bookworm:hover{
-        background-color: #38acd7;
-        border: 1px solid #38acd7;
-        transform: translateY(-2px);
-        box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
-    }
-}
+
+/*!*========== Logged Out Navbar ==========*!*/
+
+/*!*== Continue to search Button ===*!*/
+/*#continue-search-button {*/
+/*    background-color: #5b8ed5;*/
+/*    border: 1px solid #5b8ed5;*/
+/*}*/
+/*!*== Continue to search Button - HOVER ===*!*/
+/*#continue-search-button:HOVER {*/
+/*    background-color: #37517e;*/
+/*    border: 1px solid #37517e;*/
+/*}*/
+
+
+
+
 
 /*================= Logged In ================*/
 .navbar{
