--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,11 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" th:fragment="Navbar">
+<nav id="loggedOutNavbar" class="navbar navbar-expand-lg bg-body-tertiary" th:fragment="Navbar">
     <div class="container">
         <!-- Navbar brand logo -->
         <a th:href="@{/}" class="navbar-brand">Bookworm</a>
         <!-- Collapse Button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Icon -->
             <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Everything that will be collapse -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 <a th:href="@{/aboutBookworm}" href="" class="nav-about-bookworm nav-link">About Bookworm</a>
