Footer, nested the CSS

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -4,7 +4,7 @@
       &copy; Fake Copyright <strong><span>Bookworm V.2</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
-      Designed by <a href="https://www.linkedin.com/in/heygilly/">HeyGilly</a>
+      Production by <a href="https://www.linkedin.com/in/heygilly/">HeyGilly</a>
     </div>
   </div>
   <!--  Bootstrap 5.2  -->
