--- a/src/main/resources/static/css/navbarFooterStylesheet.css
+++ b/src/main/resources/static/css/navbarFooterStylesheet.css
@@ -1,5 +1,4 @@
 
-
 /*--------------- Navbar - Logged out ---------------*/
 #loggedOutNavbar{
     .container{
@@ -42,44 +41,50 @@
 
 
 /*--------------- Footer ---------------*/
-/*===== Footer ======*/
 #footer{
     font-size: 14px;
     background: #37517e;
+    .footer-bottom {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        color: #fff;
+        .copyright {
+            float: left;
+        }
+        .credits {
+            float: right;
+            font-size: 13px;
+            & a {
+                transition: 0.3s;
+            }
+
+        }
+
+    }
 }
 
-.footer-bottom {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    color: #fff;
-}
 
-.copyright {
-    float: left;
-}
 
-.credits {
-    float: right;
-    font-size: 13px;
-}
-
-.credits a {
-    transition: 0.3s;
-}
 
 @media (max-width: 768px) {
-    .footer-bottom {
-        padding-top: 20px;
-        padding-bottom: 20px;
+    /*Footer*/
+    #footer{
+        .footer-bottom {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            .copyright {
+                text-align: center;
+                float: none;
+            }
+            .credits {
+                text-align: center;
+                float: none;
+                padding-top: 4px;
+                & a {
+                    transition: 0.3s;
+                }
+            }
+        }
     }
 
-    .copyright,
-    .credits {
-        text-align: center;
-        float: none;
-    }
-
-    .credits {
-        padding-top: 4px;
-    }
 }
