--- a/src/main/resources/static/css/navbarFooterStylesheet.css
+++ b/src/main/resources/static/css/navbarFooterStylesheet.css
@@ -1,6 +1,13 @@
 
 /*--------------- Navbar - Logged out ---------------*/
 #loggedOutNavbar{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 0;
+    z-index: 200;
+    align-items: center;
+    padding: 20px 0;
     .container{
         /*Bookworm Brand*/
         .navbar-brand {
