--- a/src/main/resources/templates/base/about.html
+++ b/src/main/resources/templates/base/about.html
@@ -5,74 +5,83 @@
 <body>
 
 
-<!===== Navbar =====>
+<!----- Navbar ----->
 <nav th:replace="~{partials/navbar.html :: Navbar}"></nav>
 
-<!===== Hero Section =====>
-<main id="hero-about" class="container-fluid d-flex align-items-center">
-  <div class="container">
-    <div class="row">
-      <section class="pt-4 pt-lg-0">
-        <h1>About Bookworm</h1>
-        <h2>Learn about the Bookworm application and the creator. </h2>
+<!-- Hero Introduction -->
+<header id="hero-aboutPage">
+    <section>
+      <h1>About Bookworm</h1>
+      <h2>Learn what all you can do with Bookworm</h2>
+    </section>
+</header>
+
+<main>
+  <!-- About Bookworm Section -->
+  <div id="wholeAboutBookworm">
+    <section class="container">
+      <!-- Title Section - About Bookworm -->
+      <div id="title-aboutBookworm">
+        <h2>About Bookworm</h2>
+      </div>
+      <!-- Content -->
+      <section id="content-aboutBookworm">
+        <p>
+          Nunc lectus diam, sagittis sit amet nibh eu, vestibulum varius velit. Suspendisse elementum ligula et metus accumsan dictum. Mauris libero sem, fringilla et mattis id, faucibus quis est. Nunc at malesuada neque. Donec sit amet ligula dictum, auctor dolor ut, accumsan velit. Pellentesque quis mauris a ex dapibus blandit. Curabitur a orci ultrices orci sodales congue eu sit amet diam. Phasellus quis diam gravida, condimentum tellus eget, gravida elit. Curabitur lorem massa, rutrum nec ultricies sed, scelerisque eget risus. Vivamus ornare, orci non interdum porttitor, mauris nisl pulvinar nisi, eu ornare nibh turpis id ligula. Vestibulum eget nulla arcu. Integer non felis risus. Pellentesque eget lacus sed ligula maximus luctus eget id nibh. Etiam vitae enim non ante commodo feugiat. Duis nisi eros, vehicula sed venenatis quis, auctor nec neque.
+        </p>
       </section>
+    </section>
+  </div>
+
+
+  <div id="whole-languages-container">
+    <div class="container">
+      <!-- Languages used -->
+      <div id="languages-logo-container">
+        <!--Boostrap-->
+        <div class="">
+          <img th:src="@{img/languages/bootstrap.png}" class="img-fluid" title="Bootstrap" alt="Bootstrap">
+        </div>
+        <!--Spring Boot-->
+        <div class="">
+          <img th:src="@{img/languages/spring-boot.png}" class="img-fluid" title="Spring Boot" alt="Spring Boot">
+        </div>
+        <!--JavaScript-->
+        <div class="">
+          <img th:src="@{img/languages/javascript.png}" class="img-fluid" title="JavaScript" alt="JavaScript">
+        </div>
+        <!--Thymeleaf-->
+        <div class="">
+          <img th:src="@{img/languages/thymleaf.png}" class="img-fluid" title="Thymeleaf" alt="Thymeleaf">
+        </div>
+        <!--MySQL-->
+        <div class="">
+          <img th:src="@{img/languages/mysql.png}" class="img-fluid" title="MySQL" alt="MySQL">
+        </div>
+        <!--Java-->
+        <div class="">
+          <img th:src="@{img/languages/java.png}" class="img-fluid" title="Java" alt="Java">
+        </div>
+      </div>
     </div>
   </div>
+
+
+
+
+
 </main>
 
-<!===== About Bookworm Section =====>
-<div id="aboutBookworm">
-  <section class="container">
-
-    <div class="aboutBookwormSection">
-      <h2>About Bookworm</h2>
-    </div>
-    <div class="content">
-      <p>Nunc lectus diam, sagittis sit amet nibh eu, vestibulum varius velit. Suspendisse elementum ligula et metus accumsan dictum. Mauris libero sem, fringilla et mattis id, faucibus quis est. Nunc at malesuada neque. Donec sit amet ligula dictum, auctor dolor ut, accumsan velit. Pellentesque quis mauris a ex dapibus blandit. Curabitur a orci ultrices orci sodales congue eu sit amet diam. Phasellus quis diam gravida, condimentum tellus eget, gravida elit. Curabitur lorem massa, rutrum nec ultricies sed, scelerisque eget risus. Vivamus ornare, orci non interdum porttitor, mauris nisl pulvinar nisi, eu ornare nibh turpis id ligula. Vestibulum eget nulla arcu. Integer non felis risus. Pellentesque eget lacus sed ligula maximus luctus eget id nibh. Etiam vitae enim non ante commodo feugiat. Duis nisi eros, vehicula sed venenatis quis, auctor nec neque. </p>
-    </div>
-
-  </section>
-</div>
-
-<!==== Languages Used =====>
-<section id="languages" class="languages section-bg mb-5 pb-5">
-  <div class="container">
-
-    <div class="row">
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/bootstrap.png}" class="img-fluid" alt="Bootstrap">
-      </div>
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/spring-boot.png}" class="img-fluid" alt="Spring Boot">
-      </div>
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/javascript.png}" class="img-fluid" alt="JavaScript">
-      </div>
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/thymleaf.png}" class="img-fluid" alt="Thymeleaf">
-      </div>
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/mysql.png}" class="img-fluid" alt="MySQL">
-      </div>
-
-      <div class="col-lg-2 col-4 d-flex align-items-center justify-content-center">
-        <img th:src="@{img/languages/java.png}" class="img-fluid" alt="Java">
-      </div>
-
-    </div>
-
-  </div>
-</section>
 
 
 
 
-<!=== Footer ===>
+
+
+
+
+
+<!----- Footer ----->
 <footer th:replace="~{partials/footer.html :: Footer}"></footer>
 
 </body>
