--- a/src/main/resources/static/css/buttonStylesheet.css
+++ b/src/main/resources/static/css/buttonStylesheet.css
@@ -8,9 +8,9 @@ Hero Introduction
 
 */
 /*Index*/
-#hero-introduction .container #section-one aside .get-started-button,
-#hero-introduction .container #section-one aside .login-button,
 /*Navbar*/
+main #hero-introduction .container #section-one aside .get-started-button,
+main #hero-introduction .container #section-one aside .login-button,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn{
     background-color: #13aa52;
@@ -43,9 +43,9 @@ Hero Introduction
 */
 
 /*Index*/
-#hero-introduction .container #section-one aside .get-started-button:hover,
-#hero-introduction .container #section-one aside .login-button:hover,
 /*Navbar*/
+main #hero-introduction .container #section-one aside .get-started-button:hover,
+main #hero-introduction .container #section-one aside .login-button:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn:hover{
     background-color: #0e8641;
@@ -61,8 +61,8 @@ Hero Introduction
 
 /* Login Button Color Change*/
 /*Index*/
-#hero-introduction .container #section-one aside .login-button,
-    /*Navbar*/
+/*Navbar*/
+main #hero-introduction .container #section-one aside .login-button,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in{
     background-color: #5b8ed5;
     border: 1px solid #5b8ed5;
@@ -70,8 +70,8 @@ Hero Introduction
 
 /*Login Button - HOVER*/
 /*Index*/
-#hero-introduction .container #section-one aside .login-button:hover,
-    /*Navbar*/
+/*Navbar*/
+main #hero-introduction .container #section-one aside .login-button:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
